msa/flex/yaml/flex-vue/400-flex-flex-vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-vue
  labels:
    app: flex-vue
    version: 1.0.0
    release: flex
spec:
  selector:
    matchLabels:
      app: flex-vue
      version: 1.0.0
      release: flex
  replicas: 1
  template:
    metadata:
      labels:
        app: flex-vue
        version: 1.0.0
        release: flex
#      annotations:
#        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: flex-vue 
        image: 172.16.51.166:5000/flex/flex-vue:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/localtime
          name: timezone-config
        securityContext:
          privileged: true
#        livenessProbe:
#          httpGet:
#            path: /api/be/auth/actuator/health
#            port: 8080
#          initialDelaySeconds: 30
#          periodSeconds: 10
#        readinessProbe:
#          httpGet:
#            path: /api/be/auth/actuator/health
#            port: 8080
#          initialDelaySeconds: 30
#          periodSeconds: 10
#        resources:
#          requests:
#            cpu: "500m"
#            memory: "1250Mi"
#          limits:
#            cpu: "2000m"
#            memory: "1250Mi"
#      nodeSelector:
#        ktis-node: "true"
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
        name: timezone-config
