msa/flex/yaml/flex-vue/tmp-601-flex-flex-java-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flex-java-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: flex.hanwha.co.kr
    http:
      paths:
      #- path: /flex-archteam-management(/|$)(.*)
      - path: 
        backend:
          serviceName: flex-archteam-management
          servicePort: 80
      - path: /flex-asset-management(/|$)(.*)
        backend:
          serviceName: flex-asset-management
          servicePort: 80
      - path: /flex-file-api(/|$)(.*)
        backend:
          serviceName: flex-file-api
          servicePort: 80
      - path: /flex-oauth2-authorization(/|$)(.*)
        backend:
          serviceName: flex-oauth2-authorization
          servicePort: 80
      - path: /flex-user-api(/|$)(.*)
        backend:
          serviceName: flex-user-api
          servicePort: 80
