msa/flex/yaml/flex-vue/tmp-602-flex-flex-java-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flex-java-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: flex.hanwha.co.kr
    http:
      paths:
      - path: /flex/auth-api
        backend:
          serviceName: flex-oauth2-authorization
          servicePort: 80
